# salsa20

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
CMake/: EnableCatch.cmake  EnableCppFormat.cmake
include/: salsa20.h
src/: CMakeLists.txt  config.h.in  constgen.py  salsa20.cxx  salsa20_const.cxx
test/: CMakeLists.txt  common.h  correct.out  main.cxx  md5.cxx  md5.h  sse.cxx
